# node-win

./: .clang-format  .gitignore  .npmignore  CMakeLists.txt  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: publish.yml
lib/: binding.ts
src/: Service.cpp  Service.h  input.cpp  input.h  library.cpp
test/: test_binding.js
